salesforce/force-app/main/default/objects/CategoryPerformanceCard__mdt/CategoryPerformanceCard__mdt.object-meta.xml
<CustomObject>
    <description>Phase 20c — Per-category cards on the Category Performance grid. One record per card (Products, Price Rules, Subscriptions, etc.) grouped into sections (CPQ/Billing/ARM). Customers add/edit/reorder cards entirely in Setup.</description>
    <label>Category Performance Card</label>
    <pluralLabel>Category Performance Cards</pluralLabel>
</CustomObject>