salesforce/force-app/main/default/objects/CategoryPerformanceCard__mdt/fields/CardKey__c.field-meta.xml
<CustomField>
    <fullName>CardKey__c</fullName>
    <label>Card Key</label>
    <description>Stable identifier (e.g. products, price_rules). Used by the LWC for keying.</description>
    <type>Text</type><length>60</length><required>true</required><unique>true</unique><externalId>true</externalId>
</CustomField>