salesforce/force-app/main/default/objects/CategoryPerformanceCard__mdt/fields/DetectorIds__c.field-meta.xml
<CustomField>
    <fullName>DetectorIds__c</fullName>
    <label>Detector Ids</label>
    <description>Comma-separated list of detector IDs (e.g. REN-001,REN-002). Cards without any mapped detectors auto-show 100% / No issues.</description>
    <type>Text</type><length>255</length>
</CustomField>