salesforce/force-app/main/default/objects/CategoryPerformanceCard__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Display Label</label>
    <type>Text</type><length>80</length>
</CustomField>