salesforce/force-app/main/default/objects/CategoryPerformanceCard__mdt/fields/SectionKey__c.field-meta.xml
<CustomField>
    <fullName>SectionKey__c</fullName>
    <label>Section Key</label>
    <description>Which section this card lives under: cpq | billing | arm.</description>
    <type>Text</type><length>40</length><required>true</required>
</CustomField>